# DayOSKernel

./: CMakeLists.txt  kernel-process.c  kernel.ld  ramdisk.c
CMake/: CMakeTestASM-NASMCompiler.cmake
hal.x86/: cpudet-clean.c  debug.c  driver.c  elf.c  gdt.c  heap.c  idt.c  init.c  isr.asm  message.c  multitasking.c  pit.c  pmm.c  ports.c  stack.c  start.asm  syscall.c  video.c  vmm.c
hal.x86/include/: args.h  cpu.h  debug.h  elf.h  gdt.h  heap.h  idt.h  kmessage.h  ksyscall.h  multiboot.h  multitasking.h  pit.h  pmm.h  ports.h  types.h  video.h  vmm.h
include/: ramdisk.h
sys/: arch.h  kernelconfig.h
